syntax = "proto3";

import "google/protobuf/empty.proto";
option csharp_namespace = "tobeh.TypoLinkedRolesService";

package linkedRoles;

service LinkedRoles {
  rpc UpdateUserMetadata(UpdateUserMetadataMessage) returns (google.protobuf.Empty);
}

message UpdateUserMetadataMessage {
  repeated int64 userIds = 1;
};


